--- a/biblatex.bib
+++ b/biblatex.bib
@@ -811,24 +811,6 @@
   bibsource  = qplbib
 }
 
-@article{Fu2023,
-  title        = {Proto-Quipper with Dynamic Lifting},
-  author       = {Fu, Peng and Kishida, Kohei and Ross, Neil J. and Selinger, Peter},
-  date         = {2023-01},
-  journaltitle = pacmpl,
-  volume       = {7},
-  number       = {POPL},
-  eid          = {11},
-  doi          = {10.1145/3571204},
-  eprinttype   = {arXiv},
-  eprint       = {2204.13041},
-  url          = {https://gitlab.com/frank-peng-fu/dpq-remake},
-  abstract     = {Quipper is a functional programming language for quantum computing. Proto-Quipper is a family of languages aiming to provide a formal foundation for Quipper. In this paper, we extend Proto-Quipper-M with a construct called dynamic lifting, which is present in Quipper. By virtue of being a circuit description language, Proto-Quipper has two separate runtimes: circuit generation time and circuit execution time. Values that are known at circuit generation time are called parameters, and values that are known at circuit execution time are called states. Dynamic lifting is an operation that enables a state, such as the result of a measurement, to be lifted to a parameter, where it can influence the generation of the next portion of the circuit. As a result, dynamic lifting enables Proto-Quipper programs to interleave classical and quantum computation. We describe the syntax of a language we call Proto-Quipper-Dyn. Its type system uses a system of modalities to keep track of the use of dynamic lifting. We also provide an operational semantics, as well as an abstract categorical semantics for dynamic lifting based on enriched category theory. We prove that both the type system and the operational semantics are sound with respect to our categorical semantics. Finally, we give some examples of Proto-Quipper-Dyn programs that make essential use of dynamic lifting.},
-  keywords     = {proto-quipper-dyn, proto-quipper-m, proto-quipper, quipper, quantum programming languages, categorical semantics, dynamic lifting},
-  webnote      = {Also see the companion paper \cite{Fu2022a}},
-  bibsource    = qplbib
-}
-
 @inproceedings{Fu2022a,
   title      = {A biset-enriched categorical model for Proto-Quipper with dynamic lifting},
   author     = {Fu, Peng and Kishida, Kohei and Ross, Neil J. and Selinger, Peter},
@@ -840,7 +822,7 @@
   abstract   = {Quipper and Proto-Quipper are a family of quantum programming languages that, by their nature as circuit description languages, involve two runtimes: one at which the program generates a circuit and one at which the circuit is executed, normally with probabilistic results due to measurements. Accordingly, the language distinguishes two kinds of data: parameters, which are known at circuit generation time, and states, which are known at circuit execution time. Sometimes, it is desirable for the results of measurements to control the generation of the next part of the circuit. Therefore, the language needs to turn states, such as measurement outcomes, into parameters, an operation we call dynamic lifting. The goal of this paper is to model this interaction between the runtimes by providing a general categorical structure enriched in what we call "bisets". We demonstrate that the biset-enriched structure achieves a proper semantics of the two runtimes and their interaction, by showing that it models a variant of Proto-Quipper with dynamic lifting. The present paper deals with the concrete categorical semantics of this language, whereas a companion paper [FKRS2022a] deals with the syntax, type system, operational semantics, and abstract categorical semantics.},
   keywords   = {proto-quipper-dyn, proto-quipper, quipper, categorical semantics},
   note       = {To appear},
-  webnote    = {See the companion paper \cite{Fu2022}},
+  webnote    = {See the companion paper \cite{Fu2023}},
   bibsource  = qplbib
 }
 
@@ -856,6 +838,24 @@
   abstract     = {Modern quantum programming languages integrate quantum resources and classical control. They must, on the one hand, be linearly typed to reflect the no-cloning property of quantum resources. On the other hand, high-level and practical languages should also support quantum circuits as first-class citizens, as well as families of circuits that are indexed by some classical parameters. Quantum programming languages thus need linear dependent type theory. This paper defines a general semantic structure for such a type theory via certain fibrations of monoidal categories. The categorical model of the quantum circuit description language Proto-Quipper-M by Rios and Selinger (2017) constitutes an example of such a fibration, which means that the language can readily be integrated with dependent types. We then devise both a general linear dependent type system and a dependently typed extension of Proto-Quipper-M, and provide them with operational semantics as well as a prototype implementation.},
   keywords     = {proto-quipper-d, fibration, categorical model, quantum programming languages, linear dependent types, proto-quipper-m},
   webnote      = {Expanded version of \cite{Fu2020}},
+  bibsource    = qplbib
+}
+
+@article{Fu2023,
+  title        = {Proto-Quipper with Dynamic Lifting},
+  author       = {Fu, Peng and Kishida, Kohei and Ross, Neil J. and Selinger, Peter},
+  date         = {2023-01},
+  journaltitle = pacmpl,
+  volume       = {7},
+  number       = {POPL},
+  eid          = {11},
+  doi          = {10.1145/3571204},
+  eprinttype   = {arXiv},
+  eprint       = {2204.13041},
+  url          = {https://gitlab.com/frank-peng-fu/dpq-remake},
+  abstract     = {Quipper is a functional programming language for quantum computing. Proto-Quipper is a family of languages aiming to provide a formal foundation for Quipper. In this paper, we extend Proto-Quipper-M with a construct called dynamic lifting, which is present in Quipper. By virtue of being a circuit description language, Proto-Quipper has two separate runtimes: circuit generation time and circuit execution time. Values that are known at circuit generation time are called parameters, and values that are known at circuit execution time are called states. Dynamic lifting is an operation that enables a state, such as the result of a measurement, to be lifted to a parameter, where it can influence the generation of the next portion of the circuit. As a result, dynamic lifting enables Proto-Quipper programs to interleave classical and quantum computation. We describe the syntax of a language we call Proto-Quipper-Dyn. Its type system uses a system of modalities to keep track of the use of dynamic lifting. We also provide an operational semantics, as well as an abstract categorical semantics for dynamic lifting based on enriched category theory. We prove that both the type system and the operational semantics are sound with respect to our categorical semantics. Finally, we give some examples of Proto-Quipper-Dyn programs that make essential use of dynamic lifting.},
+  keywords     = {proto-quipper-dyn, proto-quipper-m, proto-quipper, quipper, quantum programming languages, categorical semantics, dynamic lifting},
+  webnote      = {POPL '23. Also see the companion paper \cite{Fu2022a}},
   bibsource    = qplbib
 }
 
@@ -2518,7 +2518,7 @@
   url          = {https://gitlab.umiacs.umd.edu/finn/qunity},
   abstract     = {We introduce Qunity, a new quantum programming language designed to treat quantum computing as a natural generalization of classical computing. Qunity presents a unified syntax where familiar programming constructs can have both quantum and classical effects. For example, one can use sum types to implement the direct sum of linear operators, exception handling syntax to implement projective measurements, and aliasing to induce entanglement. Further, Qunity takes advantage of the overlooked BQP subroutine theorem, allowing one to construct reversible subroutines from irreversible quantum algorithms through the uncomputation of "garbage" outputs. Unlike existing languages that enable quantum aspects with separate add-ons (like a classical language with quantum gates bolted on), Qunity provides a unified syntax along with a novel denotational semantics that guarantees that programs are quantum mechanically valid. We present Qunity's syntax, type system, and denotational semantics, showing how it can cleanly express several quantum algorithms. We also detail how Qunity can be compiled to a low-level qubit circuit language like OpenQASM, proving the realizability of our design.},
   keywords     = {algebraic data types, reversible computing, quantum subroutines, kraus operators},
-  webnote      = {See extended version on arXiv.},
+  webnote      = {POPL '23. See extended version on arXiv.},
   bibsource    = qplbib
 }
 
@@ -2845,7 +2845,7 @@
   url          = {https://github.com/coq-quantum/CoqQ},
   abstract     = {CoqQ is a framework for reasoning about quantum programs in the Coq proof assistant. Its main components are: a deeply embedded quantum programming language, in which classic quantum algorithms are easily expressed, and an expressive program logic for proving properties of programs. CoqQ is foundational: the program logic is formally proved sound with respect to a denotational semantics based on state-of-art mathematical libraries (mathcomp and mathcomp analysis). CoqQ is also practical: assertions can use Dirac expressions, which eases concise specifications, and proofs can exploit local and parallel reasoning, which minimizes verification effort. We illustrate the applicability of CoqQ with many examples from the literature.},
   keywords     = {quantum programs, program logics, proof assistants, mathematical libraries},
-  note         = {To appear at POPL '23.},
+  webnote      = {POPL '23},
   bibsource    = qplbib
 }
 
